--- a/L05_1_Logistic_Regression_Practice.ipynb
+++ b/L05_1_Logistic_Regression_Practice.ipynb
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Logistic Regression 구현"
+        "# Logistic Regression 구현 - 이진분류 문제를 풀기 위함 (출력이 0 또는 1)"
       ],
       "metadata": {
         "id": "8fftO-RAjiWv"
